css/style.css
body {
	margin: 0;
	padding: 0;
	display: flex;
	flex-direction:column;
	display: inline;
}
.main-package{
	display: flex;
	flex-direction: row;
	height: 100%;
	background-color: white;
	font-family: 'Verdana', 'sans-serif';
}
.main-content {
	display: flex;
	box-sizing: border-box;
	flex-direction: column;
	padding-left: 205px;
	background-color: #DFDCE5FF;
	font-family: 'Verdana', 'sans-serif';
	width: 100vw;
}

/*================================Meny============================================*/

.menu {
	position: fixed;
	text-align: center;
	background-color: white;
	height: 100%;
	width: 205px;
}

nav{
	display: flex;
	flex-direction: column;
	margin: auto;
	margin-top: 0;
}

nav a{
	font-family: 'Geneva', Verdana, sans-serif;
	text-align: center;
	text-decoration: none;
	padding: 15px;
}
nav a:hover{
	text-decoration: underline;
	cursor: pointer;
}
nav a:visited{
	color: black;
}

.active{
	background-color: rgb(223, 223, 223);
}


/*================================Forside============================================*/
.content {
	display: flex;
	flex-direction: column;
	background-color: #97B3D0FF;
	height: 100vh;
}

.title {
	display: flex;
	flex-direction: row;
	margin: 5px auto;
}

.title-text {
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin-left: 10px;
}

.title-text h1 {
	font-size: 2.4em;
}

.frontpage-intro {
	display: flex;
	flex-direction: column;
	justify-content: center;
	margin: auto;
	padding: 10px;
	color: white;
}

.fp1 {
	font-size: 2em;
	font-weight: bold;
	margin: 0;
}

.fp2 {
	font-size: 4em;
	font-weight: bold;
	margin: 5px 0 5px 0;
}

.frontpage-intro span {
	background-color: orange;
	border-radius: 4px;
	padding: 2px;
}

.content2 {
	display: flex;
	flex-direction: row;
	background-color: #DFDCE5FF;
	justify-content: center;
	margin-bottom: 5vh;
}

.degrees-section {
	display: flex;
	flex-direction: column;
	text-align: center;
	margin-top: 3vh;
	margin-bottom: 10vh;
}

.degrees-flex {
	display: flex;
	flex-direction: row;
	justify-content: center;
}

.degree-box {
	display: flex;
	flex-direction: column;
	margin: 5px;
	background-color: #DFDCE5FF;
	border-radius: 5px;
	padding-top: 1vh;
	color: #333;
}

.degree-box h3 {
	text-align: center;
}

.degree-box ul {
	text-align: left;
	line-height: 2;
}

.degree-box li {
	margin: 8px 0 8px 0;
}

.degree-box a {
	text-decoration: none;
	font-weight: bold;
	color: maroon;
	padding: 3px;
	border-radius: 5px;
}

.degree-box a:hover {
	background-color: lightblue;
}

@media only screen and (max-width: 1200px) {
	/* gjør delen med linjer smalere */
	.degrees-flex, .degrees-section {
		flex-direction: column;
	}
}

.pil {
	background-color: #97B3D0FF;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	padding: 0;
	padding-bottom: 10px;
	margin: 0;
}

/*================================Footer============================================*/

footer{
	background-color:white;
	display: flex;
	align-items: center;
	flex-direction: column;
	justify-content: center;
	height: auto;
	margin-bottom: 0;
}

.footer-links {
	display: flex;
	flex-direction: row;
}

.footer-links a {
	font-family: 'Geneva', Verdana, sans-serif;
	font-size: 15px;
	text-align: center;
	text-decoration: none;
	margin: 10px;
}

.footer-links a:hover{
    text-decoration: underline;
}

@media only screen and (max-width: 980px) {
	/* endringer for mindre skjermer */
	.main-package {
		flex-direction: column;
	}

	.menu {
		position: static;
	}

	.menu img {
		display: none;
	}

	nav {
		flex-direction: row;
		width: 100vw;
	}

	nav a {
		padding: 0;
		font-size: 2.4vw;
		margin: auto;
	}

	.main-content {
		padding-left: 0;
	}

	.content {
		height: 85vh;
	}

	.title {
		font-size: 2.5vw;
	}

	.title img {
		width: 20vw;
	}

	.fp1 {
		font-size: 5vw;
	}
	
	.fp2 {
		font-size: 7vw;
	}

	.pil {
		font-size: 4vw;
	}

	.pil img {
		width: 7vw;
		height: auto;
	}

	.degrees-section {
		font-size: 4vw;
	}

	footer {
		flex-direction: row;
	}

	.footer-links {
		flex-direction: column;
		margin: 5vw;
	}

	.footer-links a {
		font-size: 3vw;
	}
}

